Improved navigation through older tweets with an endless scrollbar. closes #6.

--- a/css/chromified.css
+++ b/css/chromified.css
@@ -37,6 +37,10 @@ a:hover { text-decoration: underline; }
 #timeline {
   margin: 0px;
   padding: 0px;
+  padding-right: 20px;
+  max-height: 400px;
+  overflow: auto;
+  overflow-x: hidden;
 }
 
 #paginator {
