--- a/css/chromified.css
+++ b/css/chromified.css
@@ -18,6 +18,16 @@ a {
 
 a:hover { text-decoration: underline; }
 
+.tab_modifier {
+  position: absolute;
+  top: 1px;
+  left: 5px;
+  background-color: red;
+  height: 1px;
+  border-radius: 1px;
+  opacity: 0.4;
+}
+
 #__debug {
   width: 200px;
   background-color: #dd0;
@@ -34,7 +44,7 @@ a:hover { text-decoration: underline; }
   min-width: 370px;
 }
 
-#timeline {
+.timeline {
   margin: 0px;
   padding: 0px;
   padding-right: 20px;
