--- a/css/whisper.css
+++ b/css/whisper.css
@@ -15,6 +15,16 @@ a:hover {
   text-decoration: underline;
 }
 
+.tab_modifier {
+  position: absolute;
+  top: 1px;
+  left: 5px;
+  background-color: red;
+  height: 1px;
+  border-radius: 1px;
+  opacity: 0.4;
+}
+
 #__debug {
   width: 200px;
   background-color: #dd0;
@@ -31,7 +41,7 @@ a:hover {
   min-width: 370px;
 }
 
-#timeline {
+.timeline {
   margin: 0px;
   padding: 0px;
   padding-right: 20px;
