Adding 'from' and 'in reply to' information, closes #20

--- a/css/chromified.css
+++ b/css/chromified.css
@@ -180,7 +180,13 @@ input[type='text'] {
 
 .tweet.unread { border: 1px solid #4b8cdc; }
 
+.tweet .text {
+  clear: right;
+  padding-top: 2px;
+}
+
 .tweet .user {
+  float: left;
   font-size: 9pt;
   color: #666;
   font-weight: bold;
@@ -230,6 +236,13 @@ input[type='text'] {
   top: 15px;
   display: none;
   padding: 5px;
+}
+
+.tweet .extra_tweet_data {
+  float: right;
+  color: #999;
+  font-size: 8pt;
+  min-height: 10pt;
 }
 
 /**
