--- a/css/chromified.css
+++ b/css/chromified.css
@@ -3,116 +3,28 @@
   Copyright 2009 Will Ryan, ausnadian at gmail dot com
 */
 
-body {
-  font-family: Helvetica, Arial, sans-serif;
-  margin: 0px;
-  padding: 0px;
-  color: black;
-  font-size: 10pt;
-}
-
-a {
-  color: #665;
-  text-decoration: none;
-}
-
-a:hover { text-decoration: underline; }
-
 input[type='text'] {
   -webkit-border-radius: 5px;
   background-color: #f0f5fb;
   border: 1px solid #c1cddc;
-  margin: 0px;
 }
-
-.tab_modifier {
-  position: absolute;
-  top: 1px;
-  left: 5px;
-  background-color: red;
-  height: 1px;
-  border-radius: 1px;
-  opacity: 0.4;
-}
-
-#__debug {
-  width: 200px;
-  background-color: #dd0;
-}
-
-#error {
-  margin: 5px;
-  margin-bottom: 10px;
-  background-color: #F9C236;
-  width: 100%;
-}
-
-#workspace {
-  margin: 0px 4px 0px 4px;
-  min-width: 410px;
-}
-
-.timeline {
-  margin: 0px;
-  padding: 0px;
-  padding-right: 20px;
-  max-height: 400px;
-  overflow: auto;
-  overflow-x: hidden;
-}
-
-#logout {
-  float: left;
-  font-size: 8pt;
-  margin-top: 4px; }
-
-#loading {
-  float: right;
-  margin: 0px;
-  padding: 0px; }
 
 #update_tweets {
-  display: none;
   -webkit-border-radius: 5px;
   background-color: #b4cff2;
-  font-size: 9pt;
   color: #666;
-  font-weight: bold;
-  text-align: center;
-  margin-bottom: 3px;
-  cursor: pointer; }
-
-#update_tweets:hover { background-color: #eff4fb; }
-
-#shortener_area {
-  margin: 0px;
-  padding: 0px;
-  margin-bottom: 2px;
 }
 
-#shortener_area input {
-  width: 100%;
-  z-index: 999;
-}
-
-#shortener_button {
-  left: 50%;
-  position: absolute;
-  width: 100px;
-  padding: 1px;
-  margin-left: -51px;
+#update_tweets:hover {
+  background-color: #eff4fb;
 }
 
 #shortener_button div {
-  text-align: center;
   border-bottom-left-radius: 5px 5px;
   border-bottom-right-radius: 5px 5px;
-  margin-top: -1px;
   background-color: #e5effe;
   border: 1px solid #b4cff2;
   border-top: 0px;
-  cursor: pointer;
-  display: none;
 }
 
 #shortener_button div:hover {
@@ -122,128 +34,65 @@ input[type='text'] {
 }
 
 #shorten_current {
-  width: 16px;
-  height: 16px;
-  position: absolute;
-  right: 4px;
-  margin-top: -18px;
   background: #fff url(../img/globe_blue.png) repeat-x 0 0;
-  cursor: pointer;
 }
 
 #compose_tweet_area textarea {
   -webkit-border-radius: 5px;
   background-color: #f0f5fb;
   border: 1px solid #c1cddc;
-  width: 100%;
-  margin: 0px;
-  padding: 0px; }
-
-#compose_tweet_area .footer .chars_left {
-  margin-top: 3px;
-  float: right; }
-
-#compose_tweet_area input[type="button"]:hover:disabled { outline: inherit; }
-
-#compose_tweet img { margin-top: 3px; }
-
-#compose_tweet img.left {
-  float: left;
-  margin-left: 5px; }
-
-#compose_tweet img.right {
-  float: right;
-  margin-right: 5px; }
+}
 
 #compose_tweet {
   -webkit-border-radius: 5px;
-  font-size: 9pt;
   color: #000000;
-  font-weight: bold;
-  margin: 0px;
-  padding: 3px;
-  text-align: center;
-  cursor: pointer;
   background-color: #e5effe;
-  border: 1px solid #b4cff2; }
+  border: 1px solid #b4cff2;
+  padding: 3px;
+}
 
 #compose_tweet:hover {
   background-color: #f0f5fb;
-  border: 1px solid #c1cddc; }
+  border: 1px solid #c1cddc;
+}
 
 .tweet {
   -webkit-border-radius: 5px;
-  width: 370px;
   background-color: #ffffff;
   border: 3px solid #e5effe;
-  padding: 2px 4px 2px 4px;
-  margin-bottom: 3px; }
+  margin-bottom: 3px;
+}
 
-.tweet.unread { border: 1px solid #4b8cdc; }
-
-.tweet .text {
-  clear: right;
-  padding-top: 2px;
+.tweet.unread {
+  border: 1px solid #4b8cdc;
 }
 
 .tweet .user {
-  float: left;
-  font-size: 9pt;
   color: #666;
   font-weight: bold;
-  text-decoration: none; }
-
-.tweet .footer {
-  margin: 0px;
-  padding: 0px;
-  position: relative;
+  text-decoration: none;
 }
 
 .tweet .timestamp {
-  font-size: 8pt;
   color: #999;
-  margin-top: 2px;
-  float: left; }
-
-.tweet .actions { float: right; }
+}
 
 .tweet .actions a {
-  font-size: 8pt;
-  color: #999; }
+  color: #999;
+}
 
 .tweet img.profile {
   -webkit-border-radius: 5px;
-  border: 0;
-  margin-right: 4px;
-  float: left;
-  cursor: pointer;
-  height: 48px;
-  width: 48px; }
-
-.tweet img.retweet {
-  width: 14px;
-  height: 14px;
-  margin-right: 2px;
-  margin-top: 1px;
-  vertical-align: top;
 }
 
 .tweet .rt_confirm {
   -webkit-border-radius: 5px;
   border: 3px solid #3BAAE3;
   background-color: #e5effe;
-  position: absolute;
-  right: 0px;
-  top: 15px;
-  display: none;
-  padding: 5px;
 }
 
 .tweet .extra_tweet_data {
-  float: right;
   color: #999;
-  font-size: 8pt;
-  min-height: 10pt;
 }
 
 /**
@@ -252,76 +101,14 @@ input[type='text'] {
 	sexy-combo 2.1.3 : http://code.google.com/p/sexy-combo/
 */
 
-div.sexy {
-  white-space: nowrap;
-  height: 17px;
-  border: 0;
-  margin: 0;
-  margin-bottom: 3px;
-  padding: 0;
-  width: 107px;
-  float: right;
-  margin: 7px 8px 0px 0px;
-  z-index: 999;
-}
-
 div.sexy input {
-  margin: 0 0 0 0;
-  font:normal 8pt tahoma, arial, helvetica, sans-serif;
-  padding:1px 3px;
   background:#fff url(text-bg.gif) repeat-x 0 0;
   border:1px solid #B5B8C8;
-  height: 14px;
-  line-height: 16px;
-  vertical-align:middle;
-  left: 0px;
-  top: 0px;
-  width: 90px;
-
 }
 
 div.sexy div.icon {
-  width:17px;
-  height:17px;
-  border: 0;
   background:transparent url(trigger.gif) no-repeat 0 0;
-  cursor:pointer;
   border-bottom: 1px solid #B5B8C8;
-  top:0px;
-  left: 90px;
-
-}
-
-div.sexy div.list-wrapper {
-  left: 0px;
-  top: 17px;
-  border: 1px solid #D9D9D9;
-  background-color: #FFFFFF;
-  padding: 0;
-  margin: 0;
-  width: 105px;
-  bottom: auto;
-}
-
-div.sexy div.list-wrapper-up {
-  top: auto;
-  bottom: 17px;
-}
-
-div.sexy ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  height: 200px;
-}
-
-div.sexy  li {
-  padding: 0;
-  padding-left: 5px;
-  font:normal 8pt tahoma, arial, helvetica, sans-serif;
-  background-color: #FFFFFF;
-  cursor: pointer;
-  margin: 0;
 }
 
 div.sexy li.active {
