--- a/css/chromified.css
+++ b/css/chromified.css
@@ -73,11 +73,7 @@ input[type='text'] {
   text-decoration: none;
 }
 
-.tweet .timestamp {
-  color: #999;
-}
-
-.tweet .actions a {
+.tweet .footer {
   color: #999;
 }
 
