Support marking and unmarking tweets as favorite. Partially implements issue #26

--- a/css/base.css
+++ b/css/base.css
@@ -206,11 +206,15 @@ input[type='text'] {
 .tweet .new_actions {
   position: relative;
   float: right;
-  display: none;
 }
 
 .tweet .new_actions img {
   cursor: pointer;
+  display: none;
+}
+
+.tweet .new_actions img.starred {
+  display: inline;
 }
 
 /**
