--- a/css/options.css
+++ b/css/options.css
@@ -15,29 +15,43 @@ fieldset legend {
   font-weight: bold;
 }
 
-label {
+#main_area label {
   float: left;
   width: 150px;
 }
 
-input[type="text"], input[type="password"], select {
+#main_area input[type="text"], #main_area input[type="password"], #main_area select {
   border: 1px solid #b4cff2;
   width: 140px;
 }
 
-input[type="checkbox"] {
-  margin-left: 80px;
-}
-
-span.error {
+#main_area span.error {
   color: red;
   margin-left: 5px;
 }
 
-.notice {
+#main_area .notice {
   font-style: italic;
   color: #777;
   font-size: 8pt;
+}
+
+#main_area table {
+  border-collapse: collapse;
+}
+
+#main_area table input[type="text"] {
+  width: 50px;
+}
+
+#main_area table td:not(.label) {
+  width: 100px;
+  text-align: center;
+  border-right: 1px solid #000;
+}
+
+#main_area table th:not(:empty) {
+  border-right: 1px solid #000;
 }
 
 #main_area {
@@ -49,6 +63,10 @@ span.error {
   background-color: #ffffff;
   border: 3px solid #e5effe;
   padding: 2px 4px 2px 4px;
+}
+
+canvas.color_selector {
+  cursor: pointer;
 }
 
 #saved_notice {
