Correctly showing new tweets count and adding an option to read all tweets. Closes #36 and closes #41.

--- a/css/base.css
+++ b/css/base.css
@@ -52,10 +52,18 @@ input[type='text'] {
   margin-top: 4px;
 }
 
+#mark_as_read {
+  float: right;
+  font-size: 8pt;
+  margin-top: 4px;
+}
+
 #loading {
   float: right;
   margin: 0px;
   padding: 0px;
+  padding-right: 5px;
+  padding-top: 6px;
 }
 
 .timeline {
