--- a/css/base.css
+++ b/css/base.css
@@ -42,6 +42,40 @@ input[type='text'] {
   background-color: #F9C236;
 }
 
+#absolute_container {
+  position: absolute;
+  z-index: 999999;
+  left: 0px;
+  width: 100%;
+  display: none;
+}
+
+#warning {
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 4px;
+  display: table;
+}
+
+#warning .img_area {
+  display: table-cell;
+  vertical-align: middle;
+  width: 32px;
+}
+
+#warning .content {
+  margin-left: 5px;
+}
+
+#warning .dismiss {
+  float: right;
+  cursor: pointer;
+  margin-top: -3px;
+  margin-right: -3px;
+  margin-left: 3px;
+}
+
 #workspace {
   margin: 0px 4px 0px 4px;
   min-width: 440px;
