--- a/css/chromified.css
+++ b/css/chromified.css
@@ -67,6 +67,10 @@ input[type='text'] {
   border: 1px solid #c1cddc;
 }
 
+.tweet_overlay {
+  -webkit-border-radius: 5px;
+}
+
 .tweet {
   -webkit-border-radius: 5px;
   background-color: #ffffff;
