--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,9 @@
-body {
+html, body {
   font-family: Helvetica, Arial, sans-serif;
+  font-style: normal;
+}
+
+body {
   margin: 0px;
   padding: 0px;
   color: black;
