--- a/css/darkness-theme/jquery-ui-1.7.2.custom.css
+++ b/css/darkness-theme/jquery-ui-1.7.2.custom.css
@@ -48,7 +48,7 @@
 
 /* Component containers
 ----------------------------------*/
-.ui-widget { font-family: Segoe UI, Arial, sans-serif; font-size: 1em; }
+.ui-widget { font-family: Segoe UI, Lucida Sans Unicode, Lucida Sans, Helvetica, Arial, sans-serif; font-size: 1em; }
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Segoe UI, Arial, sans-serif; font-size: 1em; }
 .ui-widget-content { border: 1px solid #666666; background: #000000 url(images/ui-bg_inset-soft_25_000000_1x100.png) 50% bottom repeat-x; color: #ffffff; }
 .ui-widget-content a { color: #ffffff; }
