Adding configurable font options.

--- a/css/chromified-theme/jquery-ui-1.7.2.custom.css
+++ b/css/chromified-theme/jquery-ui-1.7.2.custom.css
@@ -48,7 +48,7 @@
 
 /* Component containers
 ----------------------------------*/
-.ui-widget { font-family: Segoe UI, Lucida Sans Unicode, Lucida Sans, Helvetica, Arial, sans-serif; font-size: 1.0em; }
+.ui-widget { font-family: Helvetica, Arial, sans-serif; font-size: 1.0em; }
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Lucida Grande, Lucida Sans, Arial, sans-serif; font-size: 1em; }
 .ui-widget-content { border: 1px solid #dddddd; background: #f2f5f7 url(images/ui-bg_highlight-hard_100_f2f5f7_1x100.png) 50% top repeat-x; color: #362b36; }
 .ui-widget-header { border: 1px solid #aed0ea; background: #deedf7 url(images/ui-bg_highlight-soft_100_deedf7_1x100.png) 50% 50% repeat-x; color: #222222; font-weight: bold; margin-bottom: 3px;}
