Improved support for desktop notifications and adding an option to enable it. Closes #108.

--- a/css/options.css
+++ b/css/options.css
@@ -66,6 +66,10 @@ fieldset legend {
 }
 
 #main_area table.notifications td {
+  width: 120px;
+}
+
+#main_area table.tweet_color td {
   width: 100px;
 }
 
